--- a/index.html
+++ b/index.html
@@ -78,7 +78,26 @@
         </div>
       </div>
     </section>
-
+    <section id="video">
+      <section id="inspiration">
+        <div class="video-content">
+          <h2 class="title">Inspiration</h2>
+          <p class="subtitle">
+            Watch this video to get inspired about the endless possibilities in
+            web development. Discover how creativity and technology come
+            together to build amazing web experiences. Learn from industry
+            experts and see how they are shaping the future of the web.
+          </p>
+          <iframe
+            width="600"
+            height="300"
+            src="https://www.youtube.com/embed/3JluqTojuME"
+            frameborder="0"
+            allowfullscreen
+          ></iframe>
+        </div>
+      </section>
+    </section>
     <footer></footer>
   </body>
 </html>
