devlopment target added

--- a/index.html
+++ b/index.html
@@ -90,14 +90,65 @@
           </p>
           <iframe
             width="700"
-            height="320"
+            height="280"
             src="https://www.youtube.com/embed/3JluqTojuME"
             frameborder="0"
             allowfullscreen
-          ></iframe>
+          >
+          </iframe>
+        </div>
+      </section>
+      <section id="dev-target">
+        <div class="dev-target-content">
+          <h2 class="title">My Development Target</h2>
+          <p class="subtitle">
+            My development target is to become a web developer. I want to be
+            able to create websites that are visually appealing and
+            user-friendly.
+          </p>
+        </div>
+
+        <div class="dev-target-tools">
+          <div class="html">
+            <div class="html-des">
+              <div class="dev-target-image">
+                <img src="resources/html.png" alt="images" width="40px" />
+              </div>
+              <h4 class="title">HTML</h4>
+              <p class="subtitle">
+                HTML (HyperText Markup Language) is the standard language for
+                creating web pages.
+              </p>
+            </div>
+          </div>
+          <div class="css">
+            <div class="css-des">
+              <div class="dev-target-image">
+                <img src="resources/css.png" alt="images" width="40px" />
+              </div>
+              <h4 class="title">CSS</h4>
+              <p class="subtitle">
+                CSS (Cascading Style Sheets) to apply styles for enhancing the
+                visual presentation of your web content.
+              </p>
+            </div>
+          </div>
+          <div class="javascript">
+            <div class="javascript-des">
+              <div class="dev-target-image">
+                <img src="resources/js.png" alt="images" width="40px" />
+              </div>
+              <h4 class="title">javascript</h4>
+              <p class="subtitle">
+                Javascript is a versatile programming language that allows you
+                to create dynamic and interactive web content.
+              </p>
+            </div>
+          </div>
         </div>
       </section>
     </section>
+
     <footer></footer>
   </body>
 </html>
