learn more hyperlink added

--- a/index.html
+++ b/index.html
@@ -117,8 +117,15 @@
               <h4 class="title">HTML</h4>
               <p class="subtitle">
                 HTML (HyperText Markup Language) is the standard language for
-                creating web pages.
+                creating web pages.HTML describes the structure of a web page.
               </p>
+              <!--learn more about html-->
+              <a
+                href="https://developer.mozilla.org/en-US/docs/Web/HTML"
+                target="_blank"
+                class="learn-more"
+                >Learn more</a
+              >
             </div>
           </div>
           <div class="css">
@@ -131,6 +138,13 @@
                 CSS (Cascading Style Sheets) to apply styles for enhancing the
                 visual presentation of your web content.
               </p>
+              <!--learn more about css-->
+              <a
+                href="https://developer.mozilla.org/en-US/docs/Web/HTML"
+                target="_blank"
+                class="learn-more"
+                >Learn more</a
+              >
             </div>
           </div>
           <div class="javascript">
@@ -140,9 +154,16 @@
               </div>
               <h4 class="title">javascript</h4>
               <p class="subtitle">
-                Javascript is a versatile programming language that allows you
-                to create dynamic and interactive web content.
+                Javascript is a versatile programming language.It allows you to
+                create dynamic and interactive web content.
               </p>
+              <!--learn more about javascript-->
+              <a
+                href="https://developer.mozilla.org/en-US/docs/Web/HTML"
+                target="_blank"
+                class="learn-more"
+                >Learn more</a
+              >
             </div>
           </div>
         </div>
