next target added

--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
           </iframe>
         </div>
       </section>
+
       <section id="dev-target">
         <div class="dev-target-content">
           <h2 class="title">My Development Target</h2>
@@ -168,6 +169,85 @@
           </div>
         </div>
       </section>
+    </section>
+
+    <section id="next-targets">
+      <div class="targeted-action">
+        <div class="next-targets-content">
+          <h2 class="title">My Next Target</h2>
+          <p class="subtitle">
+            My next targets are to learn React.js, Next.js, and MongoDB to
+            enhance my web development skills.
+          </p>
+        </div>
+
+        <div class="next-targets-tools">
+          <div class="reactjs">
+            <div class="reactjs-des">
+              <div class="reactjs-image">
+                <img src="resources/react.png" alt="reactjs logo" width="" />
+              </div>
+              <div class="about-reactjs">
+                <h4 class="title">React.js</h4>
+                <p class="subtitle">
+                  React.js is a JavaScript library for building user interfaces.
+                  It allows you to create reusable UI components and manage the
+                  state of your application efficiently.
+                </p>
+                <a
+                  href="https://reactjs.org/"
+                  target="_blank"
+                  class="learn-more"
+                  >Learn more</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Node js -->
+
+        <div class="nodejs">
+          <div class="nodejs-des">
+            <div class="nodejs-image">
+              <img src="resources/nodejs.png" alt="nodejs logo" width="90px" />
+            </div>
+            <div class="about-nodejs">
+              <h4 class="title">Node js</h4>
+              <p class="subtitle">
+                React.js is a JavaScript library for building user interfaces.
+                It allows you to create reusable UI components and manage the
+                state of your application efficiently.
+              </p>
+              <a href="https://nodejs.org/" target="_blank" class="learn-more"
+                >Learn more</a
+              >
+            </div>
+          </div>
+        </div>
+        <!-- about Mongo db -->
+        <div class="mongodb">
+          <div class="mongodb-des">
+            <div class="mongodb-image">
+              <img
+                src="resources/mongodb.png"
+                alt="mongodb logo"
+                width="100px"
+              />
+            </div>
+            <div class="about-mongodb">
+              <h4 class="title">Mongodb</h4>
+              <p class="subtitle">
+                React.js is a JavaScript library for building user interfaces.
+                It allows you to create reusable UI components and manage the
+                state of your application efficiently.
+              </p>
+              <a href="https://mongodb.org/" target="_blank" class="learn-more"
+                >Learn more</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
     <footer></footer>
