submit button added

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
+  <>
     <main>
       <section id="hero">
         <div class="hero-background">
@@ -249,7 +249,27 @@
         </div>
       </div>
     </section>
+    <!-- Contact with us -->
+    <section id="contact">
+      <div class="contact-content">
+        <h2 class="title">I need Support</h2>
+        <p class="subtitle">
+          If you have any questions or would like to get in touch, please feel
+          free to contact me.
+        </p>
+        <form action="submit.php" method="post">
+          <div class="contact-fields">
+             <div class="form-group">
+            <textarea name="feedback" id="feedback" placeholder="Suggest any feedback for me" rows="2"></textarea>
+             </div>
+          <button type="submit">Submit</button>
+        </div>
+        </form>
+      </div>
+    </section>
 
-    <footer></footer>
+    <footer>
+      
+    </footer>
   </body>
 </html>
