Ready to submit

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Assignment</title>
+    <title>Assignment-1</title>
 
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -206,8 +206,8 @@
             </div>
           </div>
         </div>
-        <!-- Node js -->
 
+        <!-- Node js -->
         <div class="nodejs">
           <div class="nodejs-des">
             <div class="nodejs-image">
@@ -216,9 +216,9 @@
             <div class="about-nodejs">
               <h4 class="title">Node js</h4>
               <p class="subtitle">
-                React.js is a JavaScript library for building user interfaces.
-                It allows you to create reusable UI components and manage the
-                state of your application efficiently.
+                Node.js is a free, open-source, cross-platform JavaScript
+                runtime environment that lets developers create servers, web
+                apps, command line tools and scripts.
               </p>
               <a href="https://nodejs.org/" target="_blank" class="learn-more"
                 >Learn more</a
@@ -239,9 +239,9 @@
             <div class="about-mongodb">
               <h4 class="title">Mongodb</h4>
               <p class="subtitle">
-                React.js is a JavaScript library for building user interfaces.
-                It allows you to create reusable UI components and manage the
-                state of your application efficiently.
+                MongoDB is a source-available, cross-platform, document-oriented
+                database program. Classified as a NoSQL database product,
+                MongoDB uses JSON-like documents with optional schemas
               </p>
               <a href="https://mongodb.org/" target="_blank" class="learn-more"
                 >Learn more</a
@@ -267,7 +267,8 @@
                 id="feedback"
                 placeholder="Suggest any feedback for me"
                 rows="2"
-              ></textarea>
+              >
+              </textarea>
             </div>
             <button type="submit">Submit</button>
           </div>
