made code cleaner again

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Assignment-1</title>
-
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -16,7 +15,6 @@
             <h2 class="title font">
               "In the near future, I hope to become a Developer."
             </h2>
-
             <div class="title-description">
               <p class="subtitle font">
                 A Web Developer is a professional who is responsible for the
@@ -27,7 +25,7 @@
               </p>
             </div>
             <button class="btn-primary">
-              <a href="#footer-social"> Contact with me</a>
+              <a href="#footer-social">Contact with me</a>
             </button>
           </div>
         </div>
@@ -55,10 +53,8 @@
             <img src="resources/Layer_1.png" alt="images" width="200px" />
           </div>
         </div>
-
         <div class="num-2 dev-reason-two">
           <img src="resources/Group 3.png" alt="images" width="200px" />
-
           <div class="dev-reason-two-content">
             <h3 class="title">I will Do Coding and Change The World</h3>
             <p class="title-des-two">
@@ -67,7 +63,6 @@
             </p>
           </div>
         </div>
-
         <div class="num-3 dev-reason-two">
           <div class="dev-reason-two-content">
             <h3 class="title">I will Do Coding and Change The World</h3>
@@ -96,11 +91,9 @@
             src="https://www.youtube.com/embed/3JluqTojuME"
             frameborder="0"
             allowfullscreen
-          >
-          </iframe>
+          ></iframe>
         </div>
       </section>
-
       <section id="dev-target">
         <div class="dev-target-content">
           <h2 class="title">My Development Target</h2>
@@ -110,7 +103,6 @@
             user-friendly.
           </p>
         </div>
-
         <div class="dev-target-tools">
           <div class="html">
             <div class="html-des">
@@ -120,9 +112,8 @@
               <h4 class="title">HTML</h4>
               <p class="subtitle">
                 HTML (HyperText Markup Language) is the standard language for
-                creating web pages.HTML describes the structure of a web page.
+                creating web pages. HTML describes the structure of a web page.
               </p>
-              <!--learn more about html-->
               <a
                 href="https://developer.mozilla.org/en-US/docs/Web/HTML"
                 target="_blank"
@@ -141,7 +132,6 @@
                 CSS (Cascading Style Sheets) to apply styles for enhancing the
                 visual presentation of your web content.
               </p>
-              <!--learn more about css-->
               <a
                 href="https://developer.mozilla.org/en-US/docs/Web/HTML"
                 target="_blank"
@@ -157,10 +147,9 @@
               </div>
               <h4 class="title">javascript</h4>
               <p class="subtitle">
-                Javascript is a versatile programming language.It allows you to
+                Javascript is a versatile programming language. It allows you to
                 create dynamic and interactive web content.
               </p>
-              <!--learn more about javascript-->
               <a
                 href="https://developer.mozilla.org/en-US/docs/Web/HTML"
                 target="_blank"
@@ -172,7 +161,6 @@
         </div>
       </section>
     </section>
-
     <section id="next-targets">
       <div class="targeted-action">
         <div class="next-targets-content">
@@ -182,12 +170,11 @@
             enhance my web development skills.
           </p>
         </div>
-
         <div class="next-targets-tools">
           <div class="reactjs">
             <div class="reactjs-des">
               <div class="reactjs-image">
-                <img src="resources/react.png" alt="reactjs logo" width="" />
+                <img src="resources/react.png" alt="reactjs logo" />
               </div>
               <div class="about-reactjs">
                 <h4 class="title">React.js</h4>
@@ -205,53 +192,57 @@
               </div>
             </div>
           </div>
-        </div>
-
-        <!-- Node js -->
-        <div class="nodejs">
-          <div class="nodejs-des">
-            <div class="nodejs-image">
-              <img src="resources/nodejs.png" alt="nodejs logo" width="90px" />
-            </div>
-            <div class="about-nodejs">
-              <h4 class="title">Node js</h4>
-              <p class="subtitle">
-                Node.js is a free, open-source, cross-platform JavaScript
-                runtime environment that lets developers create servers, web
-                apps, command line tools and scripts.
-              </p>
-              <a href="https://nodejs.org/" target="_blank" class="learn-more"
-                >Learn more</a
-              >
+          <div class="nodejs">
+            <div class="nodejs-des">
+              <div class="nodejs-image">
+                <img
+                  src="resources/nodejs.png"
+                  alt="nodejs logo"
+                  width="90px"
+                />
+              </div>
+              <div class="about-nodejs">
+                <h4 class="title">Node js</h4>
+                <p class="subtitle">
+                  Node.js is a free, open-source, cross-platform JavaScript
+                  runtime environment that lets developers create servers, web
+                  apps, command line tools and scripts.
+                </p>
+                <a href="https://nodejs.org/" target="_blank" class="learn-more"
+                  >Learn more</a
+                >
+              </div>
             </div>
           </div>
-        </div>
-        <!-- about Mongo db -->
-        <div class="mongodb">
-          <div class="mongodb-des">
-            <div class="mongodb-image">
-              <img
-                src="resources/mongodb.png"
-                alt="mongodb logo"
-                width="100px"
-              />
-            </div>
-            <div class="about-mongodb">
-              <h4 class="title">Mongodb</h4>
-              <p class="subtitle">
-                MongoDB is a source-available, cross-platform, document-oriented
-                database program. Classified as a NoSQL database product,
-                MongoDB uses JSON-like documents with optional schemas
-              </p>
-              <a href="https://mongodb.org/" target="_blank" class="learn-more"
-                >Learn more</a
-              >
+          <div class="mongodb">
+            <div class="mongodb-des">
+              <div class="mongodb-image">
+                <img
+                  src="resources/mongodb.png"
+                  alt="mongodb logo"
+                  width="100px"
+                />
+              </div>
+              <div class="about-mongodb">
+                <h4 class="title">Mongodb</h4>
+                <p class="subtitle">
+                  MongoDB is a source-available, cross-platform,
+                  document-oriented database program. Classified as a NoSQL
+                  database product, MongoDB uses JSON-like documents with
+                  optional schemas.
+                </p>
+                <a
+                  href="https://mongodb.org/"
+                  target="_blank"
+                  class="learn-more"
+                  >Learn more</a
+                >
+              </div>
             </div>
           </div>
         </div>
       </div>
     </section>
-    <!-- Contact with us -->
     <section id="contact">
       <div class="contact-content">
         <h2 class="title">I need Support</h2>
@@ -267,15 +258,13 @@
                 id="feedback"
                 placeholder="Suggest any feedback for me"
                 rows="2"
-              >
-              </textarea>
+              ></textarea>
             </div>
             <button type="submit">Submit</button>
           </div>
         </form>
       </div>
     </section>
-
     <footer class="site-footer">
       <div class="footer-content">
         <div class="footer-text">
@@ -288,17 +277,16 @@
           >
             <img src="resources/facebook.png" alt="facebook" width="40px"
           /></a>
-
           <a href="https://github.com/rubel2323" target="_blank">
             <img src="resources/github.png" alt="github" width="40px"
           /></a>
-
           <a href="https://www.linkedin.com/in/ahsanhabib.me" target="_blank">
             <img
               src="resources/linkedin-icon 1.png"
               alt="linkedin"
               width="40px"
-          /></a>
+            />
+          </a>
         </div>
       </div>
     </footer>
