--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <div class="hero-icon"></div>
           <div class="hero-content">
             <h2 class="title font">
-              "In the near future, I hope to become a Developer."
+              "In the near future, I hope to become a Developer"
             </h2>
             <div class="title-description">
               <p class="subtitle font">
