learn more button debugged

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <div class="hero-icon"></div>
           <div class="hero-content">
             <h2 class="title font">
-              "In the near future, I hope to become a Developer."
+              "In the near future, I hope to become a Developer"
             </h2>
             <div class="title-description">
               <p class="subtitle font">
@@ -112,7 +112,7 @@
               <h4 class="title">HTML</h4>
               <p class="subtitle">
                 HTML (HyperText Markup Language) is the standard language for
-                creating web pages. HTML describes the structure of a web page.
+                creating web pages. .
               </p>
               <a
                 href="https://developer.mozilla.org/en-US/docs/Web/HTML"
